force-app/main/default/objects/Tech_Seguro__c/Tech_Seguro__c.object-meta.xml
<CustomObject>
    <label>Seguro</label>
    <nameField>
        <label>Número de póliza</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seguros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>