force-app/main/default/objects/Tech_Seguro__c/fields/Ajuste__c.field-meta.xml
<CustomField>
    <fullName>Ajuste__c</fullName>
    <label>Ajuste</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>