force-app/main/default/objects/Tech_Seguro__c/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Consultivo</fullName>
            </value>
            <value>
                <fullName>Promotoría</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>