force-app/main/default/objects/Tech_Seguro__c/fields/Derechos__c.field-meta.xml
<CustomField>
    <fullName>Derechos__c</fullName>
    <label>Derechos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>