force-app/main/default/objects/Tech_Seguro__c/fields/Dias_para_vencer__c.field-meta.xml
<CustomField>
    <fullName>Dias_para_vencer__c</fullName>
    <formula>IF(ISNULL(Fin_del_seguro__c), NULL, Fin_del_seguro__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días para vencer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>