force-app/main/default/objects/Tech_Seguro__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emitida</fullName>
                <default>true</default>
                <label>Emitida</label>
            </value>
            <value>
                <fullName>Vigente</fullName>
            </value>
            <value>
                <fullName>Por renovar</fullName>
            </value>
            <value>
                <fullName>Renovada</fullName>
            </value>
            <value>
                <fullName>Vencida</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>