force-app/main/default/objects/Tech_Seguro__c/fields/Fin_del_seguro__c.field-meta.xml
<CustomField>
    <fullName>Fin_del_seguro__c</fullName>
    <label>Fin del seguro</label>
    <type>Date</type>
</CustomField>