force-app/main/default/objects/Tech_Seguro__c/fields/Forma_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pago__c</fullName>
    <label>Forma de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tarjeta</fullName>
            </value>
            <value>
                <fullName>Transferencia</fullName>
            </value>
            <value>
                <fullName>Efectivo</fullName>
            </value>
            <value>
                <fullName>Domiciliación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>