force-app/main/default/objects/Tech_Seguro__c/fields/Forma_Pago__c.field-meta.xml
<CustomField>
    <fullName>Forma_Pago__c</fullName>
    <label>Forma de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Metodo_pago</valueSetName>
    </valueSet>
</CustomField>