force-app/main/default/objects/Tech_Seguro__c/fields/Frecuencia_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Frecuencia_de_pago__c</fullName>
    <label>Frecuencia de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contado</fullName>
            </value>
            <value>
                <fullName>Mensual</fullName>
            </value>
            <value>
                <fullName>Trimestral</fullName>
            </value>
            <value>
                <fullName>Semestral</fullName>
            </value>
            <value>
                <fullName>Anual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>