force-app/main/default/objects/Tech_Seguro__c/fields/Inicio_del_seguro__c.field-meta.xml
<CustomField>
    <fullName>Inicio_del_seguro__c</fullName>
    <label>Inicio del seguro</label>
    <type>Date</type>
</CustomField>