force-app/main/default/objects/Tech_Seguro__c/fields/Monto_Comision__c.field-meta.xml
<CustomField>
    <fullName>Monto_Comision__c</fullName>
    <label>Monto comisión</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>