force-app/main/default/objects/Tech_Seguro__c/fields/Numero_poliza__c.field-meta.xml
<CustomField>
    <fullName>Numero_poliza__c</fullName>
    <label>Numero póliza</label>
    <type>TextArea</type>
</CustomField>