force-app/main/default/objects/Tech_Seguro__c/fields/Pct_Comision__c.field-meta.xml
<CustomField>
    <fullName>Pct_Comision__c</fullName>
    <label>% Comisión</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>