force-app/main/default/objects/Tech_Seguro__c/fields/Poliza_renovada__c.field-meta.xml
<CustomField>
    <fullName>Poliza_renovada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Poliza renovada</label>
    <referenceTo>Tech_Seguro__c</referenceTo>
    <relationshipLabel>Seguros</relationshipLabel>
    <relationshipName>Seguros</relationshipName>
    <type>Lookup</type>
</CustomField>