force-app/main/default/objects/Tech_Seguro__c/fields/Prima_total__c.field-meta.xml
<CustomField>
    <fullName>Prima_total__c</fullName>
    <formula>Prima_neta__c - Descuento__c + Recargos__c + Derechos__c + IVA__c + Ajuste__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prima total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>