force-app/main/default/objects/Tech_Seguro__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Seguros</relationshipLabel>
    <relationshipName>Seguros1</relationshipName>
    <type>Lookup</type>
</CustomField>