force-app/main/default/objects/Tech_Seguro__c/fields/Promotoria__c.field-meta.xml
<CustomField>
    <fullName>Promotoria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotoria</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Seguros (Promotoria)</relationshipLabel>
    <relationshipName>Seguros4</relationshipName>
    <type>Lookup</type>
</CustomField>