force-app/main/default/objects/Tech_Seguro__c/fields/Seguro_Autos__c.field-meta.xml
<CustomField>
    <fullName>Seguro_Autos__c</fullName>
    <formula>ISPICKVAL(Ramo__c, &quot;Autos&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seguro Autos</label>
    <type>Checkbox</type>
</CustomField>