force-app/main/default/objects/Tech_Seguro__c/fields/Seguro_Danos__c.field-meta.xml
<CustomField>
    <fullName>Seguro_Danos__c</fullName>
    <formula>ISPICKVAL(Ramo__c, &quot;Danos&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seguro Danos</label>
    <type>Checkbox</type>
</CustomField>