force-app/main/default/objects/Tech_Seguro__c/fields/Seguro_GMM__c.field-meta.xml
<CustomField>
    <fullName>Seguro_GMM__c</fullName>
    <formula>ISPICKVAL(Ramo__c, &quot;GMM&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seguro GMM</label>
    <type>Checkbox</type>
</CustomField>