force-app/main/default/objects/Tech_Seguro__c/fields/Seguro_PPR__c.field-meta.xml
<CustomField>
    <fullName>Seguro_PPR__c</fullName>
    <formula>ISPICKVAL(Ramo__c, &quot;PPR&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seguro PPR</label>
    <type>Checkbox</type>
</CustomField>