force-app/main/default/objects/Tech_Seguro__c/fields/Seguro_RC__c.field-meta.xml
<CustomField>
    <fullName>Seguro_RC__c</fullName>
    <formula>ISPICKVAL(Ramo__c, &quot;RC&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seguro RC</label>
    <type>Checkbox</type>
</CustomField>