force-app/main/default/objects/Tech_Seguro__c/fields/Seguro_Salud__c.field-meta.xml
<CustomField>
    <fullName>Seguro_Salud__c</fullName>
    <formula>ISPICKVAL(Ramo__c, &quot;Salud&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seguro Salud</label>
    <type>Checkbox</type>
</CustomField>