force-app/main/default/objects/Tech_Seguro__c/fields/Seguro_Vida__c.field-meta.xml
<CustomField>
    <fullName>Seguro_Vida__c</fullName>
    <formula>ISPICKVAL(Ramo__c, &quot;Vida&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seguro Vida</label>
    <type>Checkbox</type>
</CustomField>