force-app/main/default/objects/Tech_Seguro__c/fields/Semaforo_renovacion__c.field-meta.xml
<CustomField>
    <fullName>Semaforo_renovacion__c</fullName>
    <label>Semáforo renovación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verde</fullName>
            </value>
            <value>
                <fullName>Amarillo</fullName>
            </value>
            <value>
                <fullName>Rojo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>