force-app/main/default/objects/Tech_Seguro__c/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendedor</label>
    <referenceTo>Tech_Vendedor__c</referenceTo>
    <relationshipLabel>Seguros</relationshipLabel>
    <relationshipName>Seguros</relationshipName>
    <type>Lookup</type>
</CustomField>