force-app/main/default/objects/Tech_Seguro__c/fields/Vigencia__c.field-meta.xml
<CustomField>
    <fullName>Vigencia__c</fullName>
    <label>Vigencia</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>