force-app/main/default/objects/Tech_Seguro__c/recordTypes/Danos.recordType-meta.xml
<RecordType>
    <fullName>Danos</fullName>
    <active>true</active>
    <label>Danos</label>
</RecordType>