force-app/main/default/objects/Tech_Seguro__c/recordTypes/GMM.recordType-meta.xml
<RecordType>
    <fullName>GMM</fullName>
    <active>true</active>
    <label>GMM</label>
</RecordType>