force-app/main/default/objects/Tech_Seguro__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cliente__c</columns>
    <columns>Estatus__c</columns>
    <columns>Fin_del_seguro__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>